--- a/.env.example
+++ b/.env.example
@@ -1,96 +1,72 @@
 # ============================================================================
-# eFiche Clinical Database - ETL Configuration
-# Example Environment Variables (NO SECRETS INCLUDED)
+# MASTER NETWORK CONFIGURATION (DECOUPLED MODE)
 # ============================================================================
 
-# ============================================================================
-# DATA GENERATION CONFIGURATION
-# ============================================================================
-NUM_ROWS=10000
+# --- EXTERNAL ACCESS (For pgAdmin) ---
+EFICHE_DB_HOST_EXTERNAL=localhost
+EFICHE_DB_PORT_EXTERNAL=5434
 
-# Paths to ETL data files (modify as needed)
-ETL_CSV_FILE=/opt/airflow/data/padchest_synthetic_data.csv
-STATE_FILE=/opt/airflow/data/data_state.json
+AIRFLOW_DB_HOST_EXTERNAL=localhost
+AIRFLOW_DB_PORT_EXTERNAL=5433
 
-# Incremental Data Loading Settings
-APPEND_MODE=true
+# --- INTERNAL DOCKER ACCESS (Updated for External DBs) ---
+# We use 'host.docker.internal' so Airflow can "call out" to the host
+EFICHE_DB_HOST_INTERNAL=host.docker.internal
+EFICHE_DB_PORT_INTERNAL=5433
 
-# ============================================================================
-# DATABASE CONFIGURATION
-# ============================================================================
-
-# Database host and port
-DB_HOST=localhost
-DB_PORT=5432
-
-# --- FILL THESE WITH YOUR REAL CREDENTIALS ---
-DB_USER=__CHANGE_ME__
-DB_PASSWORD=__CHANGE_ME__
-
-DB_NAME=efiche_clinical_database
-
-# Connection pool settings
-DB_CONNECTION_TIMEOUT=30
-DB_POOL_SIZE=1000
-DB_MAX_OVERFLOW=10000
-DB_ECHO=false
+AIRFLOW_DB_HOST_INTERNAL=host.docker.internal
+AIRFLOW_DB_PORT_INTERNAL=5433
 
 # ============================================================================
-# ETL CONFIGURATION
+# CREDENTIALS PLACEHOLDERS
 # ============================================================================
+AIRFLOW_UID=50000
+AIRFLOW_GID=50000
 
-# Hugging Face Dataset Settings
-HUGGINGFACE_DATASET=MedHK23/IMT-CXR
-DATASET_SPLIT=default
-USE_STREAMING=false
-SKIP_VALIDATION=false
-DRY_RUN=false
+# Airflow Admin
+AIRFLOW_USER=your_airflow_user
+AIRFLOW_PASSWORD=your_airflow_password
+AIRFLOW_EMAIL=your_email@example.com
+AIRFLOW_FIRSTNAME=FirstName
+AIRFLOW_LASTNAME=LastName
 
-# ETL Processing
-BATCH_SIZE=500
-MAXBATCH_SIZE_ROWS=25000
-SOURCE=huggingface
+AIRFLOW_DB_USER=your_db_user
+AIRFLOW_DB_PASSWORD=your_db_password
+AIRFLOW_DB_NAME=your_airflow_metadata_db
 
-# ETL Validation
-VALIDATION_ENABLED=true
-STRICT_MODE=false
+# Clinical Data Configuration
+PG_USER=your_pg_user
+PG_PASSWORD=your_pg_password
+PG_DATABASE_OPERATIONAL=your_operational_db
+PG_DATABASE_ANALYTICS=your_analytics_db
+PG_ADMIN_EMAIL=your_admin_email@example.com
+DB_PASSWORD=your_db_password
 
-# ETL Error Handling
-MAX_RETRIES=3
-RETRY_DELAY_SECONDS=5
-CONTINUE_ON_ERROR=false
-
-# Hugging Face Cache and Processing
-HF_CACHE_DIR=./cache
-HF_USE_AUTH_TOKEN=false   # Set to "true" ONLY if using a private dataset
-HF_NUM_PROC=4
+POSTGRES_ANALYTICS_DB=your_analytics_db
+DB_NAME=your_operational_db
 
 # ============================================================================
-# LOGGING CONFIGURATION
+# APP SETTINGS
 # ============================================================================
-
-LOG_LEVEL=INFO
-LOG_DIR=./logs
-LOG_FILE=padchest_etl.log
-LOG_MAX_BYTES=10485760
-LOG_BACKUP_COUNT=5
-
-# ============================================================================
-# APPLICATION SETTINGS
-# ============================================================================
-
 ENVIRONMENT=production
 DEBUG=false
+BATCH_SIZE=1000
+MAXBATCH_SIZE_ROWS=5000
+SOURCE=huggingface
 
-# ============================================================================
-# AIRFLOW + POSTGRES SETTINGS
-# ============================================================================
+# Superset
+SUPERSET_PORT=8088
 
-# Airflow UID (if using Docker)
-AIRFLOW_UID=50000
+# Hugging Face
+HUGGINGFACE_DATASET=MedHK23/IMT-CXR
+HF_CACHE_DIR=./cache
+HF_NUM_PROC=4
+HF_TOKEN=your_huggingface_token
 
-# --- FILL THESE WITH YOUR REAL POSTGRES CREDENTIALS ---
-POSTGRES_USER=__CHANGE_ME__
-POSTGRES_PASSWORD=__CHANGE_ME__
+# Logging
+LOG_LEVEL=INFO
+LOG_DIR=./logs
 
-POSTGRES_ANALYTICS_DB=efiche_clinical_database
+# ETL VARS
+NUM_ROWS=2500
+APPEND_MODE=true
