superset dashboard integration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -124,13 +124,26 @@ services:
     restart: unless-stopped
     ports:
       - "${SUPERSET_PORT}:${SUPERSET_PORT}"
+    env_file:
+      - .env
     environment:
       SUPERSET_SECRET_KEY: "change_this_key_in_production"
+      SUPERSET_SQLALCHEMY_DATABASE_URI: "${SUPERSET_SQLALCHEMY_DATABASE_URI}"
+      SUPERSET_CONFIG_PATH: "/app/superset_home/superset_config.py"
+      SQLLAB_TIMEOUT: 300
+      PYTHONPATH: "/app/superset_home:/app/superset_home/.local/lib/python3.10/site-packages"
     # Also needs to see the external database
     extra_hosts:
       - "host.docker.internal:host-gateway"
     volumes:
-      - superset_home:/app/superset_home
+      - ./superset/superset_home:/app/superset_home
+    command: >
+      /bin/sh -c "
+      pip install psycopg2-binary &&
+      superset db upgrade &&
+      superset fab create-admin --username $${ADMIN_USER} --firstname Superset --lastname Admin --email $${ADMIN_EMAIL} --password $${ADMIN_PASS} || true &&
+      superset init &&
+      /usr/bin/run-server.sh"
     networks:
       - efiche_network
 
@@ -140,4 +153,3 @@ networks:
 
 volumes:
   airflow_home:
-  superset_home:
